[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/Block.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Zshape.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Zshape" type="KinematicBody2D" groups=["Zshape"]]
position = Vector2( 32, 32 )
script = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 64, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 64, 64 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 128, 64 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="sprite1" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite2" type="CollisionShape2D" parent="."]
position = Vector2( 64, 0 )
shape = SubResource( 1 )

[node name="sprite3" type="CollisionShape2D" parent="."]
position = Vector2( 64, 64 )
shape = SubResource( 1 )

[node name="sprite4" type="CollisionShape2D" parent="."]
position = Vector2( 128, 64 )
shape = SubResource( 1 )

[node name="DelayX" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DelayY" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Rotation" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DelayCanMoveDown" type="Timer" parent="."]
one_shot = true
autostart = true
